# komugi

./: .gitignore  Cargo.toml  README.md
crates/komugi-core/: Cargo.toml
crates/komugi-core/benches/: eval_bench.rs  movegen_bench.rs  perft_bench.rs
crates/komugi-core/src/: board.rs  constants.rs  eval.rs  fen.rs  game.rs  lib.rs  movegen.rs  position.rs  san.rs  search.rs  types.rs  zobrist.rs
crates/komugi-core/tests/: board_tests.rs  cross_engine_tests.rs  fen_tests.rs  integration_tests.rs  movegen_tests.rs  position_tests.rs
crates/komugi-core/tests/fixtures/: generate_cross_engine_vectors.mjs  perft_baselines.json
crates/komugi-engine/: Cargo.toml
crates/komugi-engine/src/: alphabeta.rs  classical.rs  classification.rs  encoding.rs  eval_format.rs  lib.rs  mcts.rs  neural.rs  nnue.rs  nnue_features.rs  nnue_format.rs  selfplay.rs  tt.rs  win_probability.rs
crates/komugi-engine/tests/: eval_tests.rs  mcts_tests.rs  search_tests.rs
crates/komugi-wasm/: Cargo.toml
crates/komugi-wasm/src/: lib.rs
crates/komugi-wasm/tests/: wasm_tests.rs
tests/: test_nnue_cross_validation.py  test_nnue_e2e.sh
tests/fixtures/: nnue_test_positions.txt  perft_baselines.json
training/: Dockerfile  README.md  export_nnue.py  export_onnx.py  full_loop.sh  model.py  nnue_features.py  nnue_model.py  preprocess.py  requirements.txt  train.py  train_loop.sh  train_nnue.py  validate_labels.py
