[package]
name = "komugi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = "1.0"
arrayvec = "0.7"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "perft_bench"
harness = false

[[bench]]
name = "movegen_bench"
harness = false

[[bench]]
name = "eval_bench"
harness = false
