[package]
name = "komugi-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
neural = ["dep:ort", "dep:ndarray"]

[dependencies]
komugi-core = { path = "../komugi-core" }
crossbeam = "0.8"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic"], optional = true }
ndarray = { version = "0.16", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "selfplay"
path = "src/bin/selfplay.rs"

[[bin]]
name = "arena"
path = "src/bin/arena.rs"

[[bin]]
name = "nnue_features"
path = "src/bin/nnue_features.rs"
